Create a new page to add a new ghost and add cloudinary

--- a/app/views/ghosts/new.html.erb
+++ b/app/views/ghosts/new.html.erb
@@ -9,6 +9,7 @@
       <%= f.input :age %>
       <%= f.input :rate %>
       <%= f.input :location %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit %>
     <% end %>
   </div>
