show page work in  progress

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "book-now-button";
+@import "card-ghost";
+@import "card-grid-ghosts";
