home and navbar updates ghosts

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
-.navbar-lewagon {
+.navbar-ghosts-app {
   justify-content: space-between;
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-ghosts-app .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-ghosts-app .navbar-brand img {
   width: 40px;
 }
