show page 1st commit

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "book-now-button";
-@import "card-ghost";
-@import "card-grid-ghosts";
+@import "button-book";
+@import "card-show";
+@import "card-grid";
+@import "footer";
