--- a/app/assets/stylesheets/components/button-book.scss
+++ b/app/assets/stylesheets/components/button-book.scss
@@ -4,6 +4,9 @@
   border-radius: 4px;
   background: #1EDD88;
   transition: background 0.3s ease;
+  margin-left:32px;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .btn-flat:hover {
