--- a/app/assets/stylesheets/components/card-grid.scss
+++ b/app/assets/stylesheets/components/card-grid.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+  height: 250px;
+  margin: 32px;
 }
 
 // Smallest device
