--- a/app/assets/stylesheets/components/card-show.scss
+++ b/app/assets/stylesheets/components/card-show.scss
@@ -7,7 +7,10 @@
 .card-ghost > img {
   height: 500px;
   width: 100%;
-  object-fit: cover;
+  z-index: 0;
+  /*object-fit: cover;*/
+  margin-left: 32px;
+  margin-right: 32px;
 }
 
 .card-ghost h2 {
@@ -38,3 +41,19 @@
   top: -20px;
   width: 40px;
 }
+
+.h1 {
+  margin: 32px;
+}
+
+.h2 {
+  margin: 32px;
+}
+.h3 {
+  margin: 32px;
+}
+
+.p {
+  margin: 32px;
+}
+
