--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.label :name,
+    <%= f.input :name,
                 required: true %>
     <%= f.input :email,
                 required: true,
