--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-ghosts">
+<div class="navbar navbar-expand-sm navbar-light navbar-ghosts-app">
   <%= link_to "/", class: "navbar-brand" do %>
     <%= image_tag "https://image.flaticon.com/icons/png/512/1234/1234539.png" %>
     <% end %>
@@ -12,28 +12,15 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Index", "#", class: "nav-link" %>
+          <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.ghosts.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://avatars.githubusercontent.com/u/68079682?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
-<<<<<<< HEAD
-
             <%= link_to "Profile", "user_path", class: "dropdown-item" %>
-
-
-
-=======
-<!-- Below is code to link dropdown items on the navbar -->
-            <%= link_to "Profile", "user_path", class: "dropdown-item" %>
-
-
->>>>>>> master
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
