changes to font, forms, colours

--- a/app/assets/stylesheets/components/button-book.scss
+++ b/app/assets/stylesheets/components/button-book.scss
@@ -2,7 +2,7 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: black;
   transition: background 0.3s ease;
   margin-left:32px;
   margin-top: 16px;
@@ -10,6 +10,6 @@
 }
 
 .btn-flat:hover {
-  background: #1BCB7F;
+  background: #36332c;
   color: white;
 }
