--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container booking-form">
   <h1>Request a Booking</h1>
 
-  <div>
+  <div class="booking-form-content">
     <%= simple_form_for [@ghost, @booking] do |f| %>
       <%= f.input :start_date, html5:true %>
       <%= f.input :end_date, html5:true %>
-      <%= f.input :total_price %>
-      <%= f.submit %>
+      <%= f.input :total_price, placeholder: "£", input_html: { min: '0' } %>
+      <%= f.submit "Submit Request", :class => "create"%>
     <% end %>
   </div>
 </div>
