--- a/app/views/ghosts/index.html.erb
+++ b/app/views/ghosts/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1 class="p-3 text-center">Search for Ghosts</h1>
+  <h1 class="p-3 text-center font-weight-bold">Browse Ghosts</h1>
   <div class="cards">
   <% @ghosts.each do |ghost| %>
     <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost)">
         <p><%= ghost.name %></p>
       </div>
     <% end %>
