--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-ghosts">
+<div class="navbar navbar-expand-sm navbar-light navbar-ghosts-app">
   <%= link_to "/", class: "navbar-brand" do %>
     <%= image_tag "https://image.flaticon.com/icons/png/512/1234/1234539.png" %>
     <% end %>
