update css for links and button inline

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -49,6 +49,14 @@
   margin-top: 8px;
 }
 
+.card-category a {
+  text-decoration: none;
+}
+
+.card-category:hover {
+  color: #9097a3;
+}
+
 .card-product .card-product-infos {
   padding: 16px;
 }
