--- a/app/assets/stylesheets/components/card-show.scss
+++ b/app/assets/stylesheets/components/card-show.scss
@@ -1,34 +1,52 @@
 .card-ghost {
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 16px;
+  margin-top: 24px;
+  margin-top: 64px;
+  margin-bottom: 16px;
 }
 
 .card-ghost > img {
-  height: 500px;
+  height: 664px;
   width: 100%;
   z-index: 0;
-  /*object-fit: cover;*/
-  margin-left: 32px;
-  margin-right: 32px;
+  // margin-left: 32px;
+  // margin-right: 32px;
+}
+
+.card-ghost-img {
+  object-fit: cover;
 }
 
 .card-ghost h2 {
   font-size: 16px;
-  font-weight: bold;
+  // font-weight: bold;
   margin: 0;
 }
 
 .card-ghost p {
-  font-size: 12px;
+  font-size: 18px;
   opacity: .7;
   margin: 0;
+  border-radius: 16px;
+}
+
+.container {
+  max-width: 90 rem;
+}
+
+.btn-book {
+  margin-left: 30px;
+  margin-top: 30px;
+  margin-bottom: 4px;
 }
 
 
 .card-ghost .card-ghost-infos {
   padding: 16px;
-  margin: 32px;
+  margin: 16px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -56,4 +74,5 @@
 .p {
   margin: 32px;
 }
+
 
