--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,7 +4,7 @@
   <div class="booking-form-content">
     <%= simple_form_for [ @booking, @review ] do |f| %>
       <%= f.input :content %>
-      <%= f.input :rating, input_html: { min: '0' } %>
+      <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
       <%= f.submit "Submit Request", :class => "create"%>
     <% end %>
   </div>
