Fix the turbolinks issue

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1><%= "How was your experience with your Ghost?" %></h1>
+  <h1><%= "How was your experience with #{@booking.ghost.name}?" %></h1>
 
   <div class="booking-form-content">
     <%= simple_form_for [ @booking, @review ] do |f| %>
