--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,18 @@
 
 <div class="cards py-4">
   <% @ghosts.each do |ghost| %>
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1604098365091-4dc317db39cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80)">
-    <%= link_to ghost.name, ghost_path(ghost), :class => 'card-category' %>
-  </div>
-  <% end %>
+    <% if ghost.photo.attached? %>
+      <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path ghost.photo.key, height: 300, crop: :fill %>')">
+          <p><%= ghost.name %></p>
+        </div>
+      <% end %>
+    <% else %>
+      <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost)">
+          <p><%= ghost.name %></p>
+        </div>
+      <% end %>
+    <% end %>
+   <% end %>
 </div>
