--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,7 +5,7 @@
     <%= simple_form_for [@ghost, @booking] do |f| %>
       <%= f.input :start_date, html5:true %>
       <%= f.input :end_date, html5:true %>
-      <%= f.input :total_price, placeholder: "£ #{@ghost.rate}" %>
+      <%= f.input :total_price, placeholder: "£ #{@ghost.rate}", disabled: true %>
       <%= f.submit "Submit Request", :class => "create"%>
     <% end %>
   </div>
