--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Source Sans Pro", "Helvetica", "sans-serif";
-$headers-font: "Playfair Display", "Helvetica", "sans-serif";
+$body-font: 'Chivo', sans-serif;
+$headers-font: 'Playfair Display', serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
