--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,97 @@
-<div class="banner"  style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1583680599407-f73ab374fff4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2700&q=80);">
+<!-- <div class="banner"  style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1583680599407-f73ab374fff4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2700&q=80);">
   <div class="container">
-    <h1>Hire a ghost!</h1>
-    <p>All in good spirit</p>
+    <h1>HIRE A GHOST!</h1>
+    <h3>All in good spirit</h3>
   </div>
+</div> -->
+
+<video autoplay muted loop id="myVideo">
+  <source src="https://mazwai.com/videvo_files/video/free/2020-01/small_watermarked/200116_Lens%20effect_colour_4k_024_preview.webm" type="video/mp4">
+</video>
+
+<div class="container">
+  <div class="content">
+    <h1>Hire a Ghost</h1>
+    <p>All in good spirit</p>
+    <!-- <a href="http://localhost:3000/users/sign_in"><button type="button" class="btn btn-dark"><i class="fas fa-arrow-right"></i></button></a> -->
+  </div>
+  <button type="button" class="btn btn-dark" id="stay">Unique Stays</button>
+  <button type="button" class="btn btn-dark" id="experience">Discover Experiences</button>
+  <button type="button" class="btn btn-dark" id="ghost">Host a Ghost</button>
+<!--   <div class="home-cards">
+    <button type="button" class="btn btn-dark" id="stay">Unique Stays</button>
+    <button type="button" class="btn btn-dark" id="experience">Discover Experiences</button>
+    <button type="button" class="btn btn-dark" id="ghost">Host a Ghost</button>
+  </div> -->
 </div>
 
-<div class="cards py-4">
-  <% @ghosts.each do |ghost| %>
-    <% if ghost.photo.attached? %>
-      <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path ghost.photo.key, height: 300, crop: :fill %>')">
-          <p><%= ghost.name %></p>
-        </div>
-      <% end %>
-    <% else %>
-      <%= link_to ghost_path(ghost), class: "text-decoration-none" do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost)">
-          <p><%= ghost.name %></p>
-        </div>
-      <% end %>
-    <% end %>
-   <% end %>
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+  </div>
 </div>
+<!--  <div class="home-cards">
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1620542120227-f8c552199b27?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image cap">
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1525543907410-b2562b6796d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image cap">
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1505599950318-db5a5093ce0c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80" alt="Card image cap">
+  </div>
+</div> -->
+<!--   <div class="home-cards">
+    <div class="card bg-dark text-white">
+      <img class="card-img" src="https://images.unsplash.com/photo-1620542120227-f8c552199b27?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image">
+        <div class="card-img-overlay">
+          <p class="card-title">Unique Stays</p>
+        </div>
+    </div>
+    <div class="card bg-dark text-white">
+      <img class="card-img" src="https://images.unsplash.com/photo-1525543907410-b2562b6796d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image">
+        <div class="card-img-overlay">
+          <p class="card-title">Discover Experiences</p>
+        </div>
+    </div>
+    <div class="card bg-dark text-white">
+      <img class="card-img" src="https://images.unsplash.com/photo-1505599950318-db5a5093ce0c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80" alt="Card image">
+        <div class="card-img-overlay">
+          <p class="card-title">Become a Ghost Host</p>
+        </div>
+    </div>
+  </div> -->
+<!-- <div class="card bg-dark text-white">
+  <img class="card-img" src="https://images.unsplash.com/photo-1620542120227-f8c552199b27?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1504&q=80" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+  </div>
+</div> -->
+<!-- <div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>  -->
