--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,11 +1,12 @@
 <div class="container booking-form">
   <h1><%= "Request a Haunting from #{@ghost.name}" %></h1>
 
-  <div class="booking-form-content">
+  <div class="booking-form-content" data-controller="booking-price">
     <%= simple_form_for [@ghost, @booking] do |f| %>
-      <%= f.input :start_date, html5:true %>
-      <%= f.input :end_date, html5:true %>
-      <%= f.input :total_price, placeholder: "£ #{@ghost.rate}", disabled: true %>
+      <%= f.input :start_date, html5:true, :wrapper_html => { "data-booking-price-target" => "start" } %>
+      <%= f.input :end_date, html5:true, :wrapper_html => { "data-booking-price-target" => "end" } %>
+      <input type="hidden" value="<%= @ghost.rate %>", data-booking-price-target="rate">
+      <%= f.input :total_price, disabled: true, :wrapper_html => { "data-booking-price-target" => "total" } %>
       <%= f.submit "Submit Request", :class => "create"%>
     <% end %>
   </div>
