--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -37,28 +37,30 @@
       <div>
         <div class="cards text-color ">
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
-            <%= link_to "Sad Ghosts", ghosts_path %>
+            <% if Rails.env.production? %>
+              <%= link_to "Sexy Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=sexy&commit=Search" %>
+              <% else %>
+              <%= link_to "Sexy Ghosts", "http://localhost:3000/ghosts?query=sexy&commit=Search" %>
+              <% end %>
           </div>
 
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
-            <%= link_to "Happy Ghosts", ghosts_path %>
+            <% if Rails.env.production? %>
+            <%= link_to "Humorous Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=humorous&commit=Search" %>
+            <% else %>
+            <%= link_to "Humorous Ghosts", "http://localhost:3000/ghosts?query=humorous&commit=Search" %>
+            <% end %>
           </div>
 
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
-            <%= link_to "Weird Ghosts", ghosts_path %>
+            <% if Rails.env.production? %>
+            <%= link_to "Prankster Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=prankster&commit=Search" %>
+            <% else %>
+            <%= link_to "Prankster Ghosts", "http://localhost:3000/ghosts?query=prankster&commit=Search" %>
+            <% end %>
           </div>
         </div>
       </div>
-  </div>
-
-  <div class="d-flex justify-content-center">
-      <div class="content text-center">
-        <div class="rating-text"> <span><%= @ghost.reviews.length %> reviews</span> </div>
-        <div class="ratings"> <span class="product-rating"><%= @ghost.average_rating %></span><span>/5</span>
-           <p><%= '⭐️' * @ghost.average_rating %></p>
-        </div>
-      </div>
-  </div>
 <%=  %>
   <div class="card-ghost-infos">
     <% @ghost.reviews.each do |review| %>
