--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -30,6 +30,27 @@
       </div>
 
 
+
+ <div class="d-flex justify-content-center">
+      <div class="content text-center">
+        <div class="rating-text"> <span><%= @ghost.reviews.length %> reviews</span> </div>
+        <div class="ratings"> <span class="product-rating"><%= @ghost.average_rating %></span><span>/5</span>
+           <p><%= '⭐️' * @ghost.average_rating %></p>
+        </div>
+      </div>
+  </div>
+<%=  %>
+  <div class="card-ghost-infos">
+    <% @ghost.reviews.each do |review| %>
+    <h3><%= review.booking.user.name %></h3>
+    <p><%= review.booking.created_at %></p>
+    <p><%= review.content %></p>
+    <h3><%= '⭐️' * review.rating %></h3>
+    <% end %>
+  </div>
+
+
+
       <div>
         <h3 class="other-ghosts border-top-2 background text-color"> Looking for some other spooks?</h3>
       </div>
@@ -61,15 +82,7 @@
           </div>
         </div>
       </div>
-<%=  %>
-  <div class="card-ghost-infos">
-    <% @ghost.reviews.each do |review| %>
-    <h3><%= review.booking.user.name %></h3>
-    <p><%= review.booking.created_at %></p>
-    <p><%= review.content %></p>
-    <h3><%= '⭐️' * review.rating %></h3>
-    <% end %>
-  </div>
+
 
     <div class="footer">
       <div class="footer-links">
