--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -19,13 +19,22 @@
         <div>
           <h1><%= @ghost.name %></h1>
           <br>
-           <p><%= '⭐️' * @ghost.average_rating %></p>
+           <p><%= "#{'⭐️' * @ghost.average_rating} (#{pluralize(@ghost.reviews.length, 'review')})"%></p>
           <br>
           <h2><%= @ghost.location %></h2>
           <br>
           <p><%= @ghost.description %></p>
         </div>
           <h2 class="card-ghost-pricing">£ <%= @ghost.rate %></h2>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="card-ghost-infos">
+          <% @ghost.reviews.each do |review| %>
+            <h5><%= '⭐️' * review.rating %></h5>
+            <p style= "font-style: italic;"><%= "#{review.content} -#{review.booking.user.name} (#{review.booking.created_at.strftime("%b. %Y")})" %></p>
+          <% end %>
         </div>
       </div>
 
@@ -49,24 +58,6 @@
           </div>
         </div>
       </div>
-  </div>
-
-  <div class="d-flex justify-content-center">
-      <div class="content text-center">
-        <div class="rating-text"> <span><%= @ghost.reviews.length %> reviews</span> </div>
-        <div class="ratings"> <span class="product-rating"><%= @ghost.average_rating %></span><span>/5</span>
-           <p><%= '⭐️' * @ghost.average_rating %></p>
-        </div>
-      </div>
-  </div>
-<%=  %>
-  <div class="card-ghost-infos">
-    <% @ghost.reviews.each do |review| %>
-    <h3><%= review.booking.user.name %></h3>
-    <p><%= review.booking.created_at %></p>
-    <p><%= review.content %></p>
-    <h3><%= '⭐️' * review.rating %></h3>
-    <% end %>
   </div>
 
     <div class="footer">
