--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,6 +20,18 @@
   margin: 0px;
 }
 
+.card-product-reviews {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  margin: 8px;
+  padding: 16px;
+  border-radius: 8px;
+}
+
 .card-product {
   overflow: hidden;
   height: 120px;
@@ -64,6 +76,11 @@
 }
 
 .card-category {
+  text-decoration: none;
+}
+
+.card-category a {
+  color: white;
   text-decoration: none;
 }
 
