--- a/app/views/ghosts/show.html.erb
+++ b/app/views/ghosts/show.html.erb
@@ -48,7 +48,7 @@
 
       <div>
         <div class="cards">
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1603516863860-7d5c93a83fe8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
             <% if Rails.env.production? %>
               <%= link_to "Sexy Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=sexy&commit=Search" %>
               <% else %>
@@ -56,7 +56,7 @@
               <% end %>
           </div>
 
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1603316566269-2fe0187cccc3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
             <% if Rails.env.production? %>
             <%= link_to "Humorous Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=humorous&commit=Search" %>
             <% else %>
@@ -64,7 +64,7 @@
             <% end %>
           </div>
 
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1600x900/?ghost,spooky)">
+          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1542605731-cf0169ad50e3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1553&q=80)">
             <% if Rails.env.production? %>
             <%= link_to "Prankster Ghosts", "http://best-ghost-app.herokuapp.com/ghosts?query=prankster&commit=Search" %>
             <% else %>
